Trying Fix #16 for countdown timer not visible in deployment

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,12 @@
   border-radius: 0.3125rem;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background: rgba(2, 13, 7, 0.8);
   color: #2f3138;
@@ -1500,12 +1506,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 
   #about {
-    padding: 0;
-    margin-top: 17.5rem;
+    padding: 1rem auto;
+    margin-top: 15rem;
   }
 
   #about h3 {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
 
   #about p {
